--- a/main/public/index.html
+++ b/main/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A collaboration platform for managing groups, tasks, and deadlines. Users can join or create groups, manage tasks, track deadlines, view analytics, and communicate with group members in real-time."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
